--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -197,3 +197,19 @@ padding-right: 0 !important;
 
 }
 
+
+.table tr td {
+
+a.main-link {
+
+color: #428bca;
+
+}
+
+a.main-link:hover {
+
+background: none;
+
+}
+
+}
