--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <% if current_user %>
 
-<h3>Organization: <%= @tenant.name %></h3>
+<h3 class="pull-right">Organization: <%= @tenant.name %></h3>
+
+<%= render 'projects/list' %>
 
 <% else %>
 
