--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,6 +15,13 @@
   <dd><%= @project.tenant_id %></dd>
 </dl>
 
+<h3>Artifacts</h3>
+<%= render 'artifacts/list', artifacts: @project.artifacts %>
+<br />
+<br />
+
+<%= link_to 'New Artifact', new_artifact_path(project_id: @project.id), :class => 'btn btn-primary' %>
+
 <%= link_to t('< Back to Org Home'), root_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_tenant_project_path(project: @project, tenant: @project.tenant_id), 
