added admin functionality

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -206,6 +206,8 @@ color: #428bca;
 
 }
 
+
+
 a.main-link:hover {
 
 background: none;
@@ -213,3 +215,36 @@ background: none;
 }
 
 }
+
+.fa.fa-rocket {
+
+background: #fff;
+
+border: 1px solid white;
+
+border-radius: 20px;
+
+color: #f0f;
+
+padding: 6px;
+
+}
+
+.logout {
+
+padding-left: 0;
+
+}
+
+.navbar.navbar-static-top {
+
+background: #000;
+
+color: #fff !important;
+
+padding-bottom: 5px;
+
+padding-top: 5px;
+
+}
+
