didn't work, need to use _id next

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -34,6 +34,13 @@
     </div>
   </div>
   
+  <div class="control-group">
+      <%= f.label :CertificationTest %>
+      <%= f.select :certtest, options_for_select(Certtest.certnames), { include_blank: '--Test Title--' }, required: true, class: "form-control" %>
+  </div>
+      
+
+  
   
   <br />
   
