--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -10,6 +10,7 @@
         <th><%= model_class.human_attribute_name(:title) %></th>
         <th><%= model_class.human_attribute_name(:details) %></th>
         <th><%= model_class.human_attribute_name(:expected_completion_date) %></th>
+        <th><%= model_class.human_attribute_name(:certtest) %></th>
         <th><%=t '.actions', :default => t("helpers.actions") %></th>
       </tr>
     </thead>
