--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,6 +11,8 @@
   <dd><%= @project.details %></dd>
   <dt><strong><%= model_class.human_attribute_name(:expected_completion_date) %>:</strong></dt>
   <dd><%= @project.expected_completion_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:certtest) %>:</strong></dt>
+  <dd><%= @project.certtest %></dd>
   <dt><strong><%= model_class.human_attribute_name(:tenant_id) %>:</strong></dt>
   <dd><%= @project.tenant_id %></dd>
 </dl>
